apps/landing/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing 
spec:
  replicas: 1
  selector:
    matchLabels: { app: landing }
  template:
    metadata: 
      labels: { app: landing}
    spec:
      containers:
        - name: langing 
          image: nginx:1.27.4-alpine3.21-slim
          ports:
            - { name: http , containerPort: 80 }
            - { name: https, containerPort: 443 }
