apps/landing/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: landing 
spec:
  type: ClusterIP 
  selector: { app: landing }
  ports:
  - { name: http, port: 80, targetPort: http }
  - { name: https, port: 443, targetPort: https }
